--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,10 @@
-    <div style="height: 10rem; background-color: #38df81; border-radius: 1rem; margin: 2rem;">
-
+    <div style="text-align:center; margin-top: 2ren;">
+        <div style="font-size: .6ren;">
+            <span>공지사항</span> |
+            <span>제휴문의</span> |
+            <span>서비스 소개</span>
+        </div>
+        <div style="margin-top: 1ren;">
+            <h6 style="margin-top: 1ren; font-family: 'Vidaloka', serif;">Dobong High School</h6>
+        </div>
     </div>
