django course 11 commit

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,10 +1,10 @@
-    <div style="text-align:center; margin-top: 2ren;">
-        <div style="font-size: .6ren;">
+    <div class="dongari_footer">
+        <div class="dongari_footer_button">
             <span>공지사항</span> |
             <span>제휴문의</span> |
             <span>서비스 소개</span>
         </div>
         <div style="margin-top: 1ren;">
-            <h6 style="margin-top: 1ren; font-family: 'Vidaloka', serif;">Dobong High School</h6>
+            <h6 class="dongari_logo">Dobong High School</h6>
         </div>
     </div>
