--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,6 @@
-    <div style="text-align:center; margin-bottom: 2ren 0;">
+    <div class="dongari_header">
         <div>
-            <h1 style="font-family: 'Vidaloka', serif;">Dobong High School</h1>
+            <h1 class="dongari_logo">Dobong High School</h1>
         </div>
         <div>
             <span>nav1</span>
