--- a/static/base.css
+++ b/static/base.css
@@ -21,3 +21,20 @@
         font-size: 13px;
     }
 }
+
+a {
+    color: black;
+}
+
+a:hover {
+    color: black;
+    text-decoration: none;
+}
+
+.dongari_header_nav {
+    margin: 0 0.5rem;
+}
+
+.dongari_header_navbar {
+    margin: 1rem; 0;
+}
