--- a/templates/header.html
+++ b/templates/header.html
@@ -9,6 +9,9 @@
             <a href="{% url 'projectapp:list' %}" class="dongari_header_nav">
                 <span>Projects</span>
             </a>
+            <a href="{% url 'subscribeapp:list' %}" class="dongari_header_nav">
+                <span>Subscription</span>
+            </a>
             {% if not user.is_authenticated %}
             <a href="{% url 'accountapp:login' %}?next={{ request.path }}" class="dongari_header_nav">
                 <span>login</span>
