--- a/templates/footer.html
+++ b/templates/footer.html
@@ -4,7 +4,7 @@
             <span>제휴문의</span> |
             <span>서비스 소개</span>
         </div>
-        <div style="margin-top: 1ren;">
+        <div style="margin-top: 1rem;">
             <h6 class="dongari_logo">Dobong High School</h6>
         </div>
     </div>
